--- a/about2.html
+++ b/about2.html
@@ -146,19 +146,24 @@
 
         <div class="container" style="max-width: 850px; margin-top: 30px;">
             <div class="row">
-                <div class="col-sm-5" style="padding: 0;">
+                <div class="col-sm-5">
                     <img src="https://audimediacenter-a.akamaihd.net/system/production/media/1282/images/bde751ee18fe149036c6b47d7595f6784f8901f8/AL090142_full.jpg?1581961854"
                         width="354px" height="272px">
                 </div>
-                <div class="col-md-7" style="padding: 10px; background-color: bisque;">
+                <div class="col-md-7">
                     <h3 style="margin-bottom: 0; padding: 10px 0 0 15px;">Profile</h3>
                     <hr>
-                    <p style="margin: 10px 15px;">Nama : Aldi</p>
-                    <p style="margin: 10px 15px;">Tanggal Lahir: 7 April 2003</p>
-                    <p style="margin: 10px 15px;">Agama: Katolik</p>
-                    <p style="margin: 10px 15px;">Profesi: Mahasiswa</p>
-                    <a href="about2.html" style="margin-left: 15px; text-decoration: none;">Read More >></a>
+                    <p class="text1">Nama : Aldi</p>
+                    <p class="text1">Tanggal Lahir: 7 April 2003</p>
+                    <p class="text1">Agama: Katolik</p>
+                    <p class="text1">Profesi: Mahasiswa</p>
+                    <p class="text1">Julukan : NoLife NoEat NoHope Person</p>
+                    <p class="text1">Motto Hidup : Apa Itu???</p>
                 </div>
+                <p class="" style="padding: 10px; background-color: bisque; font-size: 18px;">
+                    Perkenalkan saya Aldi dari jurusan Informatika. Tujuan saya membuat website ini untuk mengambil
+                    nilai UAS Pemograman Web1 dan menampung semua watchlist anime saya.
+                </p>
             </div>
         </div>
     </body>
